# fstransform

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Dockerfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.fstransform  README.how.to.use  README.md  TODO  acinclude.m4  aclocal.m4  configure  configure.ac
Debug/: makefile  sources.mk
Debug/src/: subdir.mk
Debug/src/arch/: subdir.mk
Debug/src/io/: subdir.mk
Release/: makefile
Release/src/: subdir.mk
Release/src/io/: subdir.mk
Release/src/ui/: subdir.mk
doc/: README.fsremap  design.txt  notes.txt  torture-test.sh
examples/job.1/: free_space_extents.txt  log.txt  loop_extents.txt
examples/job.3/: free_space_extents.txt  loop_extents.txt
examples/job.5/: free_space_extents.txt  loop_extents.txt
fsattr/: .cproject  .project
fsattr/src/: e4attr.cc  e4attr.hh  first.hh  ft_config.hh  main.cc  misc.cc  types.hh
fsmount_kernel/: .cproject  .project
fsmount_kernel/src/: log.cc  log.hh  main.cc  mstring.cc  mstring.hh
fsmove/: .cproject  .project  Makefile  ft_config.hh
fsmove/Debug/: makefile
fsmove/Debug/src/: subdir.mk
fsmove/Debug/src/io/: subdir.mk
fsmove/Release/: makefile
fsmove/Release/src/: subdir.mk
fsmove/Release/src/io/: subdir.mk
fsmove/src/: args.cc  args.hh  assert.cc  assert.hh  autoconf.hh  check.hh  copy.cc  copy.hh  eta.cc  eta.hh  features.hh  fwd.hh  inode_cache.cc  inode_cache.hh  main.cc  misc.hh  move.cc  move.cc~  move.hh  traits.hh  unsorted_map.cc  unsorted_map.hh  util.cc  util.hh  zfwd.hh  zmem.cc  zmem.hh  zpage.cc  zpage.hh  zpool.cc  zpool.hh  zptr.cc  zptr.hh  zstring.cc  zstring.hh  ztest.cc  ztest.hh
fsmove/src/cache/: cache.hh  cache_adaptor.hh  cache_mem.hh  cache_symlink.cc  cache_symlink.hh  cache_zmem.cc  cache_zmem.hh
fsmove/src/inode/: inode_cache.hh  inode_cache_mem.hh  inode_cache_posix.cc  inode_cache_posix.hh
fsmove/src/io/: disk_stat.cc  disk_stat.hh  io.cc  io.hh  io_posix.cc  io_posix.cc~  io_posix.hh  io_posix_dir.cc  io_posix_dir.hh  io_posix_xattr.cc  io_posix_xattr.hh  io_prealloc.cc  io_prealloc.hh  util_dir.cc  util_dir.hh  util_posix.cc  util_posix.hh  util_posix_dir.cc  util_posix_dir.hh
fsmove/src/rope/: rope.cc  rope.hh  rope_impl.cc  rope_impl.hh  rope_list.cc  rope_list.hh  rope_pool.cc  rope_pool.hh  rope_test.cc  rope_test.hh
fsmove/src/zmem/: zfwd.hh  zmem.cc  zmem.hh  zpage.cc  zpage.hh  zpaged_map.cc  zpaged_map.hh  zpool.cc  zpool.hh  zptr.cc  zptr.hh  ztest.cc  ztest.hh  ztree.cc  ztree.hh
fsremap/: .autotools  .cproject  .project
fsremap/Debug/: makefile  sources.mk
fsremap/Debug/src/: subdir.mk
fsremap/Debug/src/arch/: subdir.mk
fsremap/Debug/src/io/: subdir.mk
fsremap/Debug/src/ui/: subdir.mk
fsremap/Release/src/: subdir.mk
fsremap/Release/src/arch/: subdir.mk
fsremap/src/: args.cc  args.hh  assert.cc  assert.hh  autoconf.hh  autoconf.old.hh  check.hh  config.hh.in  copy.cc  copy.hh  dispatch.cc  dispatch.hh  eta.cc  eta.hh  extent.hh  features.hh  first.hh  fwd.hh  job.cc  job.cc~  job.hh  log.cc  log.hh  main.cc  map.cc  map.hh  map.t.hh  map_iterator.hh  map_stat.cc  map_stat.hh  map_stat.t.hh  misc.cc  misc.hh  mstring.cc  mstring.hh  pool.cc  pool.hh  pool.t.hh  remap.cc  remap.hh  (+13 more)
fsremap/src/arch/: mem.cc  mem.hh  mem_linux.cc  mem_linux.hh  mem_posix.cc  mem_posix.hh
fsremap/src/cache/: cache.hh  cache_adaptor.hh  cache_mem.hh  cache_symlink.cc  cache_symlink.hh  cache_zmem.cc  cache_zmem.hh
fsremap/src/inode/: inode_cache.hh  inode_cache_mem.hh  inode_cache_posix.cc  inode_cache_posix.hh
fsremap/src/io/: extent_file.cc  extent_file.hh  extent_posix.cc  extent_posix.cc~  extent_posix.hh  io.cc  io.hh  io_mem.cc  io_mem.hh  io_null.cc  io_null.hh  io_posix.cc  io_posix.cc~  io_posix.hh  io_posix_dir.cc  io_posix_dir.hh  io_prealloc.cc  io_prealloc.hh  io_self_test.cc  io_self_test.hh  io_test.cc  io_test.hh  persist.cc  persist.hh  request.hh  util.cc  util.hh  util_dir.cc  util_dir.hh  util_posix.cc  util_posix.hh  util_posix_dir.cc  util_posix_dir.hh
fsremap/src/ui/: ui.cc  ui.hh  ui_tty.cc  ui_tty.hh
fsremap/src/zmem/: zfwd.hh  zmem.hh  zpage.cc  zpage.hh  zpaged_map.hh  zpool.cc  zptr.cc  zptr.hh  ztest.cc  ztest.hh  ztree.cc  ztree.hh
fstransform/: .cproject  .project  fstransform-sh  fstransform.sh
fstransform/src/: main.cc  transform.cc  transform.hh
man/: Makefile.am  Makefile.in  fsattr.8  fsmount_kernel.8  fsmove.8  fsremap.8  fstransform.8
src/: args.cc  args.hh  assert.cc  assert.hh  autoconf.hh  check.h  check.hh  ctx.cc  ctx.hh  dispatch.cc  dispatch.hh  eta.cc  eta.hh  extent.hh  extent_list.hh  fail.c  fail.cc  fail.h  fail.hh  features.hh  file_extent.cc  file_extent.hh  file_extent.template.hh  file_util.cc  file_util.hh  filemap.c  filemap.h  fileutil.c  fileutil.h  first.h  first.hh  fwd.hh  job.cc  job.hh  log.cc  log.hh  main.c  main.cc  main.hh  map.c  (+32 more)
src/arch/: mem.cc  mem.hh  mem_linux.cc  mem_linux.hh  mem_posix.cc  mem_posix.hh
src/io/: extent_file.cc  extent_file.hh  extent_posix.cc  extent_posix.hh  io.cc  io.hh  io.template.hh  io_emul.cc  io_emul.hh  io_null.cc  io_null.hh  io_posix.cc  io_posix.hh  io_self_test.cc  io_self_test.hh  io_test.cc  io_test.hh  persist.hh  posix_extent.cc  posix_extent.hh  posix_util.cc  posix_util.hh  request.cc  request.hh  util.hh  util_posix.cc  util_posix.hh
src/ui/: ui.cc  ui.hh  ui_tty.cc  ui_tty.hh
tools/: ft_cxx_features.m4  ft_cxx_flags.m4  ft_cxx_unordered_map.m4  ft_need_funcs.m4  ft_need_libs.m4  ft_output.m4
unused/: stl_map_max_size.cc
